add javascript for the search form

--- a/hotels.html
+++ b/hotels.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Поиск отелей в Седоне</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page-body">
@@ -39,7 +40,7 @@
               <label for="filter-parking">Парковка</label>
             </li>
             <li class="filer-option">
-              <input type="checkbox" name="wifi" id="filter-wifi" class="visually-hidden filter-input-checkbox" disabled>
+              <input type="checkbox" name="wifi" id="filter-wifi" class="visually-hidden filter-input-checkbox">
               <label for="filter-wifi">Wi-fi</label>
             </li>
           </ul>
@@ -52,7 +53,7 @@
               <label for="filter-hotel">Гостиница</label>
             </li>
             <li class="filer-option">
-              <input type="checkbox" name="motel" id="filter-motel" class="visually-hidden filter-input-checkbox" disabled checked>
+              <input type="checkbox" name="motel" id="filter-motel" class="visually-hidden filter-input-checkbox" checked>
               <label for="filter-motel">Мотель</label>
             </li>
             <li class="filer-option">
