--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Добро пожаловать в Седону!</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page-body">
@@ -115,42 +116,45 @@
           Укажите предполагаемые даты поездки, <br>и мы покажем вам лучшие предложения гостиниц в Cедоне
         </p>
       </div>
-      <button type="button" class="hotels-search">Поиск гостиницы в Седоне</button>
-      <form action="https://echo.htmlacademy.ru" method="post" class="hotels-search-form">
-        <div class="search-inputs">
-          <p class="dates">
-            <label for="start-date">Дата заезда:</label>
-            <input id="start-date" type="text" name="start-date" class="date-input" value="24 апреля 2017">
-            <button type="button" class="calendar" aria-label="Календарь">
-              <svg class="calendar-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22" fill="#A9A9A9"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
-            </button>
-          </p>
-          <p class="dates">
-            <label for="end-date">Дата выезда:</label>
-            <input id="end-date" type="text" name="end-date" class="date-input" value="4 июля 2017">
-            <button type="button" class="calendar" aria-label="Календарь">
-              <svg class="calendar-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22" fill="#A9A9A9"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
-            </button>
-          </p>
-          <div class="visitors-counter">
-            <p class="visitors">
-              <label for="adults">Взрослые:</label>
-              <button type="button" class="operator minus"></button>
-              <input id="adults" type="text" name="adults" value="2" class="adults visitors-input">
-              <button type="button" class="operator plus"></button>
+      <div class="search-wrap">
+        <button type="button" class="hotels-search">Поиск гостиницы в Седоне</button>
+        <form action="https://echo.htmlacademy.ru" method="post" class="hotels-search-form is-open">
+          <div class="search-inputs">
+            <p class="dates">
+              <label for="start-date">Дата заезда:</label>
+              <input id="start-date" type="text" name="start-date" class="date-input" value="24 апреля 2017">
+              <button type="button" class="calendar" aria-label="Календарь">
+                <svg class="calendar-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22" fill="#A9A9A9"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+              </button>
             </p>
-            <p class="visitors">
-              <label for="children" class="children">Дети:</label>
-              <button type="button" class="operator minus"></button>
-              <input id="children" type="text" name="children" value="0" class="visitors-input">
-              <button type="button" class="operator plus"></button>
+            <p class="dates">
+              <label for="end-date">Дата выезда:</label>
+              <input id="end-date" type="text" name="end-date" class="date-input" value="4 июля 2017">
+              <button type="button" class="calendar" aria-label="Календарь">
+                <svg class="calendar-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22" fill="#A9A9A9"><path d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/><path d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/></svg>
+              </button>
             </p>
+            <div class="visitors-counter">
+              <p class="visitors">
+                <label for="adults">Взрослые:</label>
+                <button type="button" class="operator minus"></button>
+                <input id="adults" type="text" name="adults" value="2" class="adults visitors-input">
+                <button type="button" class="operator plus"></button>
+              </p>
+              <p class="visitors">
+                <label for="children" class="children">Дети:</label>
+                <button type="button" class="operator minus"></button>
+                <input id="children" type="text" name="children" value="0" class="visitors-input">
+                <button type="button" class="operator plus"></button>
+              </p>
+            </div>
+            <button type="submit" class="search">Найти</button>
           </div>
-          <button type="submit" class="search">Найти</button>
-        </div>
-      </form>
+        </form>
+      </div>
     </section>
-    <section class="map">
+    <section class="map map-position">
+<!--      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234819.29532541992!2d-111.88868464197978!3d34.89524956279639!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1592412478163!5m2!1sru!2sru" width="1200" height="593" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>-->
       <img src="img/map.png" alt="Седона на карте" width="1199" height="593">
     </section>
   </main>
@@ -178,5 +182,6 @@
     </p>
   </footer>
 </div>
+<script src="js/search-form.js"></script>
 </body>
 </html>
