add changes after the first review

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="promo">
       <h1 class="visually-hidden">Добро пожаловать в Седону!</h1>
       <div class="promo-images">
-        <img src="img/background-photo.jpg" alt="Панорама Седоны" width="1200" height="509">
+        <img src="img/intro-welcome.svg" alt="Панорама Седоны" width="459" height="353">
       </div>
       <div class="promo-content">
         <p class="promo-text">
@@ -162,7 +162,7 @@
   <footer class="page-footer">
     <div class="contacts">
       <p>#VisitSedona</p>
-      <div><a href="tel:+74956660266">Тел: +7(495) 666-02-66</a></div>
+      <a href="tel:+74956660266">Тел: +7(495) 666-02-66</a>
     </div>
     <ul class="socials-list">
       <li class="socials-item">
