--- a/hotels.html
+++ b/hotels.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Поиск отелей в Седоне</title>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/normalize-min.css">
+  <link rel="stylesheet" href="css/style-min.css">
 </head>
 <body class="page-body">
 <div class="page-wrap">
@@ -15,8 +15,8 @@
         <img src="img/logo-sedona.svg" alt="Логотип сайта" width="138" height="70">
       </a>
       <ul class="site-navigation">
-        <li class="align-left"><a href="#">Информация</a></li>
-        <li class="align-left"><a href="#">Фото и видео</a></li>
+        <li><a href="#">Информация</a></li>
+        <li><a href="#">Фото и видео</a></li>
         <li class="align-right"><a href="#">Карта штата</a></li>
         <li class="align-right"><a class="current">Гостиницы</a></li>
       </ul>
@@ -84,9 +84,7 @@
               </div>
             </div>
           </fieldset>
-          <p>
-            <button type="submit" class="show">Показать</button>
-          </p>
+          <button type="submit" class="show">Показать</button>
         </div>
       </form>
     </section>
@@ -96,34 +94,34 @@
         <div class="found-hotels">
           <h3 class="found-title">Найдено: 3</h3>
         </div>
-        <form action="https://echo.htmlacademy.ru" method="get" class="sorting-form">
+        <div class="sorting-form">
           <h4 class="param-sorting-title">Сортировка:</h4>
           <ul class="param-sorting-list">
             <li>
-              <button type="submit" class="param active">По цене</button>
+              <a class="param active">По цене</a>
             </li>
             <li>
-              <button type="submit" class="param">По типу</button>
+              <a href="#" class="param">По типу</a>
             </li>
             <li>
-              <button type="submit" class="param">По рейтингу</button>
+              <a href="#" class="param">По рейтингу</a>
             </li>
           </ul>
-        </form>
-        <form action="https://echo.htmlacademy.ru" method="get" class="ranking-form">
+        </div>
+        <div class="ranking-form">
           <ul class="ranking-list">
-          <li>
-            <button type="submit" class="ranking" aria-label="По возрастанию">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="#CACACA"><path d="M5.5 0L0 10h11z"/></svg>
-            </button>
-          </li>
-          <li>
-            <button type="submit" class="ranking active" aria-label="По убыванию">
-              <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="#CACACA"><path d="M5.5 10L0 0h11"/></svg>
-            </button>
-          </li>
-        </ul>
-        </form>
+            <li>
+              <a href="#" class="ranking" aria-label="По возрастанию">
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="#CACACA"><path d="M5.5 0L0 10h11z"/></svg>
+              </a>
+            </li>
+            <li>
+              <a class="ranking active" aria-label="По убыванию">
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" fill="#CACACA"><path d="M5.5 10L0 0h11"/></svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
       <ul class="hotels-list">
         <li class="hotels-item">
@@ -136,7 +134,7 @@
                 <a class="more-info" href="#">Подробнее</a>
               </div>
               <div class="right-column">
-                <span class="price">от 4000 руб.</span>
+                <span class="price">от 4000 Р.</span>
                 <button type="submit" class="book">Забронировать</button>
               </div>
             </div>
@@ -156,7 +154,7 @@
               <a class="more-info" href="#">Подробнее</a>
             </div>
             <div class="right-column">
-              <span class="price">от 3000 руб.</span>
+              <span class="price">от 3000 Р.</span>
               <button type="submit" class="book">Забронировать</button>
             </div>
             </div>
@@ -176,7 +174,7 @@
               <a class="more-info" href="#">Подробнее</a>
             </div>
             <div class="right-column">
-              <span class="price">от 2000 руб.</span>
+              <span class="price">от 2000 Р.</span>
               <button type="submit" class="book">Забронировать</button>
             </div>
             </div>
