--- a/hotels.html
+++ b/hotels.html
@@ -135,7 +135,7 @@
               </div>
               <div class="right-column">
                 <span class="price">от 4000 Р.</span>
-                <button type="submit" class="book">Забронировать</button>
+                <button type="button" class="book">Забронировать</button>
               </div>
             </div>
           </section>
@@ -155,7 +155,7 @@
             </div>
             <div class="right-column">
               <span class="price">от 3000 Р.</span>
-              <button type="submit" class="book">Забронировать</button>
+              <button type="button" class="book">Забронировать</button>
             </div>
             </div>
           </section>
@@ -175,7 +175,7 @@
             </div>
             <div class="right-column">
               <span class="price">от 2000 Р.</span>
-              <button type="submit" class="book">Забронировать</button>
+              <button type="button" class="book">Забронировать</button>
             </div>
             </div>
           </section>
